# KAOS

./: .gitignore  .gitmodules  CMakeLists.txt  PORTAL DATA RE.txt  README.md  Skylander.c  Skylander.h  SkylanderCrypt.c  SkylanderCrypt.h  hw_config.c  main.c  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c  usb_descriptors.h  util.h
Images/: info.txt
